# album_qatar_2022

./: .flake8  Procfile  backup_album.sh  manage.py  nginx.conf.sigil  pyproject.toml
album/: admin.py  models.py  urls.py  views.py
album/api/: serializers.py  urls.py  views.py
album/fixtures/: initial_data.json
album/migrations/: 0001_initial.py  0002_alter_group_options_alter_sticker_options_and_more.py  0003_team_flag.py  0004_sticker_owner.py  0005_alter_sticker_unique_together.py
album/static/album/icons/: browserconfig.xml  site.webmanifest
album/templates/album/: base.html  groups.html  login.html  mark.html  missing.html  stats.html
album/templates/album/includes/: nav.html
figus/: asgi.py  settings.py  urls.py  wsgi.py
